--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500&family=Open+Sans:ital,wght@0,400;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <!-- font-awesome-cdn link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css link here -->
     <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="he-con"> ma<span>r</span>y</h3>
             <ul>
@@ -22,6 +24,19 @@
                 <li><button class="primary-btn" >hire me</button></li>
             </ul>
         </nav>
+        <div class="bannar">
+            <div class="bannar-left">
+                <h3>HI  I AM</h3>
+                <h2>Mary Hardy</h2>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly <br>he.    Morning because as to society behaved moments.</p>
+                <button  class="primary-btn"> <i class="fa-solid fa-download"></i> download</button>
+                <button class="primary-bt"> <i class="fa-solid fa-phone"></i> conTACT</button>
+            </div>
+            <div class="bannar-right">
+                <img src="./img/hardy.png" alt="">
+            </div>
+
+        </div>
 
         
 
