--- a/index.html
+++ b/index.html
@@ -44,6 +44,63 @@
     </header>
     <main>
 
+        <section class="about">
+            <div class="about-innar">
+                <h4>about me</h4>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and  slick websites that provide real value to the end user. Thousands of clients have procured  exceptional resulfs while working with me. Delivering work  within time and budget which meets clients requirements in our mata.</p>
+            </div>
+             <div class="bo-about">
+                <div class="about-bottom">
+                    <h5>Name </h5>
+                    <h3>mary haddy</h3>
+                </div>
+                <div class="about-bottom">
+                    <h5>Email </h5>
+                    <h3>
+                        info@gmail.com </h3>
+                </div>
+                <div class="about-bottom">
+                    <h5>Brith </h5>
+                    <h3>28/12/2021</h3>
+                </div>
+                <div class="about-bottom">
+                    <h5>Form </h5>
+                    <h3>Natore</h3>
+                </div>
+             </div>
+
+        </section>
+
+        <section class="what">
+            <div class="what-top">
+                <h3>what i do</h3>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+
+            <div class="what-main">
+                <div class="what-box">
+                    <img src="./img/js.png" alt="">
+                    <h4>Vanilla JavaScript</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="what-box">
+                    <img src="./img/react.png" alt="">
+                    <h4>Vanilla JavaScript</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="what-box">
+                    <img src="./img/mongo.png" alt="">
+                    <h4>Vanilla JavaScript</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="what-box">
+                    <img src="./img/nodejs.png" alt="">
+                    <h4>Vanilla JavaScript</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
